ConsoleTools Commando
====================================================================================================

v2.0.0
----------------------------------------------------------------------------------------------------
- [syntax ] Allow '=' and ':' as name-value separators.
- [syntax ] Used only '--' for parameter names.
- [feature] Added a Ninject configuration helper package.
- [feature] Added support for anonymous commands (command without a verb).
- [feature] Added base classes for commands and views.
- [feature] Changed the attributes for commands and parameters.
- [feature] Extracted the parsing logic into a different package.
- [feature] Added support for parameter of type Encoding.

v1.5.0
----------------------------------------------------------------------------------------------------
- [feature] Improved the information displayed by the help command.

v1.4.0
----------------------------------------------------------------------------------------------------
- [feature] Added in the more details about the command being executed in the CommandCreated event.

v1.3.0
----------------------------------------------------------------------------------------------------
- [bugfix] Removed the "velo" references from the "help" information.

v1.2.0
----------------------------------------------------------------------------------------------------
- unreleased version

v1.1.0
----------------------------------------------------------------------------------------------------
- unreleased version

v1.0.0
----------------------------------------------------------------------------------------------------
- [feature] Added the Arguments class to parse the command line arguments.
- [feature] Added commands, command parameters and the binding mechanism.
- [feature] Added the views mechansim.
- developped under the VeloCity project.
- unreleased version