@@ -14,7 +14,6 @@
 // You should have received a copy of the GNU General Public License
 // along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
-using DustInTheWind.ConsoleTools.Commando.Demo.Ninject.Builder.Commands;
 using DustInTheWind.ConsoleTools.Commando.Demo.Ninject.Builder.Commands.Dummy;
 using DustInTheWind.ConsoleTools.Commando.Setup.Ninject;
 
